--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "google-auth-library": "^8.7.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^6.7.5",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20",
-    "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.5.4",
     "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.6.0"
+    "swagger-ui-express": "^4.6.0",
+    "uuid": "^9.0.0"
   }
 }
