--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-GOOGLE_CLIENT_ID="759505441768-gt9iqbun6iic2jeu1sk9fmapghla0o6g.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+JWT_SECRET="jwtSecret"
+JWT_EXPIRES_IN="30d"
+EMAIL_ADDRESS=""
+EMAIL_PASSWORD=""
+GMAIL_REFRESH_TOKEN=""
