--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
     "google-auth-library": "^8.7.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.7.5",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
+    "otp-generator": "^4.0.0",
     "socket.io": "^4.5.4",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.6.0",
